Add documentation and contexts to CommandManager